# beeai-test

./: Dockerfile  README.md  agent.yaml  beeai-provider-local.yaml  beeai-provider-unmanaged.yaml  beeai-provider.yaml  pyproject.toml
src/beeai_agents/: agent.py  configuration.py  server.py
